fixes #66, added styling to the how to section for readability.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,11 @@ body {
     font-size: larger;
 }
 
+small {
+    font-style: italic;
+}
+
+
 .fa-box:hover {
     color: rgb(105, 75, 33);
 }
